tests/errors/LexerTests.wys
constant char y = '\r'
constant char z = '.
? 
constant string s = ".......